# youtube-video-deck

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Program.cs  README.md  dev-requirements.txt  docker-compose.yml  env.sample  manage.py  package-lock.json  package.json  postcss.config.js  pytest.ini  request.py  requirements.txt  webpack.config.js  youtube-video-deck.csproj  youtube-video-deck.sln
.github/workflows/: pythonapp.yml
archive/: request.py  yt_search.yml
archive/src/: main.rs
assets/js/: index.js
design/: .gitignore  Makefile  design.md  subscription_erd.dot  video_erd.dot
src/: main.rs
subscriptions/: admin.py  crawler.py  forms.py  models.py  schema.py  urls.py  utils.py  views.py
subscriptions/migrations/: 0001_initial.py  0002_auto_20191104_1251.py  0003_video.py  0004_auto_20191104_1303.py  0005_video_subscription_id.py  0006_auto_20191104_1310.py  0007_auto_20191104_1441.py  0008_auto_20191104_1444.py  0009_video_youtube_id.py  0010_auto_20191104_1551.py  0011_auto_20191104_1626.py  0012_video_url.py  0013_remove_video_url.py  0014_subscription_user.py  0015_auto_20191106_2258.py  0016_auto_20191107_1843.py  0016_auto_20191108_1851.py  0017_auto_20191107_1903.py  0018_merge_20191108_1905.py  0019_subscription_duration.py  0020_remove_subscription_duration.py  0021_video_duration.py
subscriptions/utils/: __init__.py  crawler.py  types.py  youtube_client.py
testing/: conftest.py  test_crawler.py  test_models.py  test_utils.py  test_youtube_client.py
ytvd/: schema.py  settings.py  urls.py  wsgi.py
(+13 files in other folders)
