[package]
name = "youtube-video-deck"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.6"
futures-preview = "0.3.0-alpha.19"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
dotenv = "0.15.0"
